# OS-xv6

./: Makefile  README.md  answers-thread.txt  answers-traps.txt  setenv.sh
doc/: lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab8.md  lab9.md
fs/demo/: CMakeLists.txt  Makefile  compile_and_run.sh  restart.sh
fs/demo/src/: main.c
fs/demo/tests/: start.sh  test.sh
fs/newfs/: SPEC.txt
fs/newfs/include/: fs.layout  nfs.h  types.h
fs/newfs/src/: nfs.c  nfs_debug.c  nfs_utils.c
fs/newfs/tests/: main.sh
fs/newfs/tests/checkbm/: checkbm.py
fs/newfs/tests/stages/: remount.sh
fs/simplefs/src/: sfs.c  sfs_utils.c
fs/template/src/: PROJECT_NAME.c
fs/template/tests/: main.sh  test.sh
fs/template/tests/checkbm/: golden.json
fs/template/tests/stages/: remount.sh
kernel/: bio.c  defs.h  e1000.c  exec.c  fs.c  fs.h  kalloc.c  printf.c  proc.c  proc.h  riscv.h  syscall.c  sysfile.c  sysproc.c  trap.c  vm.c
lab1_utilities/: find.c  lab1.md  pingpong.c  xargs.c
notxv6/: ph.c
user/: find.c  primes.c  sleep.c  user.h  uthread.c
